--- a/client/src/Styles/profile.css
+++ b/client/src/Styles/profile.css
@@ -1,11 +1,17 @@
-.Tabs {
-    padding: 10px;
+.Container {
+    width: 80%; 
+    margin: 0px auto;
 }
+
+/* .Tabs {
+    padding: 10px;
+} */
 
 .cards {
     padding: 5px;
     margin-top: 10px;
     border: solid 0.2px lightgrey;
+    margin-left: -20px; 
 }
 
 .btns {
