--- a/client/src/Styles/Login.css
+++ b/client/src/Styles/Login.css
@@ -1,13 +1,4 @@
 @media all and (min-width: 480px) {
-   .Signup {
-     padding: 60px 0;
-   }
-
-   .Signup form {
-     margin: 0 auto;
-     max-width: 320px;
-   }
-
    .contentHeading {
      font-family: helvetica;
      color: #00b3b3;
@@ -20,10 +11,6 @@
      color: #696969;
    }
 
-   .formField {
-     padding: 5px 0;
-   }
-
    .formInputControl {
      width: 100%;
      border-radius: 5px;
@@ -32,16 +19,32 @@
      height: 25px;
    }
 
+   .inputLabel {
+     color: #696969;
+     letter-spacing: 2px;
+   }
+
    .formButton {
      font-size: 14px;
      font-family: helvetica;
      letter-spacing: 5px;
      text-transform: uppercase;
-     margin: 5px 0;
+     margin: 3% 0;
+     padding: 1% 0;
      width: 100%;
      height: 30px;
      border-radius: 15px;
      color: #00b3b3;
      border: 0.5px solid #00b3b3;
+     transition: 0.3s;
+   }
+
+   .formControl {
+     letter-spacing: 5px;
+   }
+
+   .formButton:hover {
+     background-color: #00b3b3;
+     color: #fff;
    }
 }
