--- a/client/src/Styles/Signup.css
+++ b/client/src/Styles/Signup.css
@@ -1,29 +1,20 @@
 @media all and (min-width: 480px) {
-   .Login {
-     padding: 60px 0;
-   }
 
-   .Login form {
-     margin: 0 auto;
-     max-width: 320px;
+
+
+   .content {
+     margin-top: 5%;
+     border: 1px solid #00b3b3;
+     border-radius: 25px;
+     padding: 3%;
+     background-color: #f5f5f5;
    }
 
    .contentHeading {
      font-family: helvetica;
      color: #00b3b3;
-     letter-spacing: 3px;
-   }
-
-   .formField {
-     padding: 5px 0;
-   }
-
-   .formInputControl {
-     width: 100%;
-     border-radius: 5px;
-     border-style: solid;
-     border: 1px solid #7e7e7e;
-     height: 25px;
+     letter-spacing: 4px;
+     margin: 25px 10px;
    }
 
    .formButton {
@@ -31,11 +22,31 @@
      font-family: helvetica;
      letter-spacing: 5px;
      text-transform: uppercase;
-     margin: 5px 0;
+     margin: 3% 0;
+     padding: 1% 0;
      width: 100%;
      height: 30px;
      border-radius: 15px;
      color: #00b3b3;
      border: 0.5px solid #00b3b3;
+     transition: 0.3s;
+   }
+
+   .formControl {
+     letter-spacing: 5px;
+   }
+
+   .formButton:hover {
+     background-color: #00b3b3;
+     color: #fff;
+   }
+
+   .inputLabel {
+     color: #696969;
+     letter-spacing: 2px;
+   }
+
+   .icons {
+     color: #00b3b3;
    }
 }
