Minor style changes

--- a/client/src/Styles/Signup.css
+++ b/client/src/Styles/Signup.css
@@ -1,6 +1,11 @@
+/* .Main-Panel {
+  margin-top: 0px; 
+} */
+.main-page {
+  margin-top: 25px !important; 
+}
+
 @media all and (min-width: 480px) {
-
-
 
    .content {
      margin-top: 5%;
